--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.webjars/datetimepicker -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>datetimepicker</artifactId>
+            <version>2.5.20-1</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
