HW01 optional rewiew_2 fix

--- a/src/main/resources/localstorage.properties
+++ b/src/main/resources/localstorage.properties
@@ -1,2 +1,2 @@
 profile=dev
-mealstorageclassname=ru.javawebinar.topjava.storage.ConcurrentMapMealStorage
+mealstorageclassname=ru.javawebinar.topjava.dao.impl.MealServiceImpl
