HW06 JspMealController created

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,6 +2,8 @@ app.title=Calories management
 app.home=Home
 app.footer=Internship <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> application
 app.login=Login as
+app.save=Save
+app.cancel=Cancel
 user.title=Users
 user.name=Name
 user.email=Email
@@ -9,4 +11,16 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 meal.title=Meals
+meal.filter.fromDate=From Date (inclusive)
+meal.filter.toDate=To Date (inclusive)
+meal.filter.fromTime=From time (inclusive)
+meal.filter.toTime=To time (inclusive)
+meal.filter.submit=Filter
+meal.addMeal=Add Meal
+meal.dateTime=Date, time
+meal.description=Description
+meal.calories=Calories
+app.update=Update
+app.delete=Delete
+app.create=Delete
 common.select=Select
