HW06 optional2 cache disabling accomplished

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath:spring/spring-app.xml
+            classpath:spring/spring-cache.xml
             classpath:spring/spring-db.xml
         </param-value>
     </context-param>
