--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,6 +10,9 @@ app.profile=profile
 app.register=Registration
 app.registered=You are registered. Please Sign in.
 
+err.duplicated.email=User with this email already exists
+err.duplicated.datetime=Meal with such date time already exist
+
 user.title=Users
 user.edit=Edit user
 user.add=Add user
