--- a/pom.xml
+++ b/pom.xml
@@ -342,6 +342,13 @@
             <version>1.8.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.6.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
